--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div class="container-fluid custom-container d-flex justify-content-center pt-5 pb-5" style="height: 450px;">
       <div class="container h-100 border rounded-5 m-0 me-3 bg-white" style="width: 20%;">
         <div class="container-fluid mt-4 ps-3 pe-3 d-flex justify-content-between">
-          <h4 class="m-0 mt-1 mb-1">Web Design</h4>
-          <p class="m-0 mt-1 mb-1 p-1 ps-2 pe-2 fw-bold text-bg-primary rounded-2">14</p>
+          <h4 class="m-0">Web Design</h4>
+          <p class="m-0 p-1 ps-2 pe-2 fw-bold text-bg-primary rounded-2">14</p>
         </div>
 
         <div class="container">
@@ -58,16 +58,15 @@
         </div>
 
       </div>
-
-      
+  
       <div class="container h-100 border rounded-5 m-0 ms-2 bg-white" style="width: 30%;">
-        <div class="container-fluid mt-4 d-flex justify-content-between">
+        <div class="container-fluid mt-4 ps-3 pe-3 d-flex justify-content-between">
           <h4 class="m-0">Finance</h4>
           <p class="m-0 p-1 ps-2 pe-2 fw-bold text-bg-primary rounded-2">25</p>
         </div>
 
         <div class="container">
-          <h5 class="mt-3 fs-5 fw-normal w-75 lh-sm" style="width: 80%; color: rgb(104, 104, 104);">Topic Listing Template includes homepage, listing page, detail page, and contact page. You can feel free to edit and adapt for your CMS requirements.</h5>
+          <h5 class="mt-3 ps-1 fs-5 fw-normal w-75 lh-sm" style="width: 80%; color: rgb(104, 104, 104);">Topic Listing Template includes homepage, listing page, detail page, and contact page. You caan feel free to edit and adapt for your CMS requirements.</h5>
           <button class="mt-3 mb-2 p-2 ps-4 pe-4 rounded-5 Learn-more"><h5 class="m-0">Learn more</h5></button>
           <!-- <img src="image1.png" alt="image" class="object-fit-scale"> -->
         </div>
